tests/compile_fail/ktstr_test_extra_sched_args_non_string_elem.rs
use ktstr::ktstr_test;

#[ktstr_test(extra_sched_args = [42])]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
